improve request validation and db error handling, update api logic
