# src/docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   api.ErrorResponse:
     properties:
@@ -89,7 +88,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/api.ErrorResponse'
-      summary: Create an user
+      summary: Create user
       tags:
       - users
   /users/{id}:
@@ -111,6 +110,10 @@ paths:
           description: Bad Request
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
       summary: Delete user by id
       tags:
       - users
@@ -126,18 +129,22 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/types.User'
         "400":
           description: Bad Request
           schema:
             $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
       summary: Get user by id
       tags:
       - users
-    patch:
+    put:
       consumes:
       - application/json
       parameters:
@@ -155,8 +162,8 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
-          description: Created
+        "200":
+          description: OK
           schema:
             $ref: '#/definitions/types.User'
         "400":
