# src/internal/handlers/users.go
@@ -3,12 +3,14 @@ package handlers
 import (
 	"context"
 	"errors"
+	"fmt"
 	"math"
 	"net/http"
 	"strconv"
 
 	"github.com/5aradise/media-content-api/src/internal/types"
 	"github.com/5aradise/media-content-api/src/pkg/api"
+	"github.com/5aradise/media-content-api/src/pkg/valid"
 	"golang.org/x/crypto/bcrypt"
 )
 
@@ -37,36 +39,70 @@ type CreateUserRequest struct {
 	Password  string `json:"password"`
 }
 
-// @Summary      Create an user
+// @Summary      Create user
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        input body CreateUserRequest true "User info"
-// @Success      201  {object}  types.User
-// @Failure      400  {object}  api.ErrorResponse
-// @Failure      500  {object}  api.ErrorResponse
+// @Param        input body      CreateUserRequest true "User info"
+// @Success      201   {object}  types.User
+// @Failure      400   {object}  api.ErrorResponse
+// @Failure      500   {object}  api.ErrorResponse
 // @Router       /users [post]
 func (s UserService) CreateUser(w http.ResponseWriter, r *http.Request) {
 	var req CreateUserRequest
 	if err := api.DecodeJSON(r, &req); err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		api.WriteErrorf(w, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	if req.Email == "" {
+		api.WriteErrorf(w, http.StatusBadRequest, "empty email")
+		return
+	}
+	if req.FirstName == "" {
+		api.WriteErrorf(w, http.StatusBadRequest, "empty first name")
+		return
+	}
+	if req.LastName == "" {
+		api.WriteErrorf(w, http.StatusBadRequest, "empty last name")
+		return
+	}
+	if req.Password == "" {
+		api.WriteErrorf(w, http.StatusBadRequest, "empty password")
+		return
+	}
+	if !valid.Email(req.Email) {
+		api.WriteErrorf(w, http.StatusBadRequest, "invalid email")
 		return
 	}
 
 	hashedPassword, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
 	if err != nil {
 		if errors.Is(err, bcrypt.ErrPasswordTooLong) {
-			api.WriteError(w, http.StatusBadRequest, "password length exceeds 72 bytes")
+			api.WriteErrorf(w, http.StatusBadRequest, "password length exceeds 72 characters")
 			return
 		}
 
-		api.WriteError(w, http.StatusInternalServerError, err.Error())
+		api.WriteErrorf(w, http.StatusInternalServerError, "CreateUser: %v", err)
 		return
 	}
 
 	user, err := s.db.CreateUser(r.Context(), req.FirstName, req.LastName, req.Email, [60]byte(hashedPassword))
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		if errors.Is(err, types.ErrNameTooLong) {
+			api.WriteErrorf(w, http.StatusBadRequest, "first or last name cannot be longer than %d characters", types.NameMaxLen)
+			return
+		}
+		if errors.Is(err, types.ErrEmailTooLong) {
+			api.WriteErrorf(w, http.StatusBadRequest, "email cannot be longer than %d characters", types.EmailMaxLen)
+			return
+		}
+		if errors.Is(err, types.ErrUserEmailExists) {
+			api.WriteErrorf(w, http.StatusBadRequest, "user with this email already exists")
+			return
+		}
+
+		api.WriteErrorf(w, http.StatusInternalServerError, "CreateUser: %v", err)
 		return
 	}
 
@@ -87,7 +123,7 @@ type ListUsersResponse struct {
 func (s UserService) ListUsers(w http.ResponseWriter, r *http.Request) {
 	users, err := s.db.ListUsers(r.Context())
 	if err != nil {
-		api.WriteError(w, http.StatusInternalServerError, err.Error())
+		api.WriteErrorf(w, http.StatusInternalServerError, "ListUsers: %v", err)
 		return
 	}
 
@@ -99,29 +135,25 @@ func (s UserService) ListUsers(w http.ResponseWriter, r *http.Request) {
 // @Accept       json
 // @Produce      json
 // @Param        id   path      int  true  "User ID"
-// @Success      201  {object}  types.User
+// @Success      200  {object}  types.User
 // @Failure      400  {object}  api.ErrorResponse
+// @Failure      500  {object}  api.ErrorResponse
 // @Router       /users/{id} [get]
 func (s UserService) GetUser(w http.ResponseWriter, r *http.Request) {
-	idS := r.PathValue("id")
-	if idS == "" {
-		panic("empty id path value")
-	}
-
-	id, err := strconv.Atoi(idS)
+	id, err := getIdPathValue(r)
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		api.WriteErrorf(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	if id > math.MaxInt32 {
-		api.WriteError(w, http.StatusBadRequest, "id cannot be greater than 2147483647")
-		return
-	}
-
-	user, err := s.db.GetUserById(r.Context(), int32(id))
+	user, err := s.db.GetUserById(r.Context(), id)
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		if errors.Is(err, types.ErrUserIdNotExists) {
+			api.WriteErrorf(w, http.StatusNotFound, "user with this id was not found")
+			return
+		}
+
+		api.WriteErrorf(w, http.StatusInternalServerError, "GetUser: %v", err)
 		return
 	}
 
@@ -141,61 +173,70 @@ type UpdateUserRequest struct {
 // @Produce      json
 // @Param        id    path int               true "User ID"
 // @Param        input body CreateUserRequest true "Updated info"
-// @Success      201  {object}  types.User
+// @Success      200  {object}  types.User
 // @Failure      400  {object}  api.ErrorResponse
 // @Failure      500  {object}  api.ErrorResponse
-// @Router       /users/{id} [patch]
+// @Router       /users/{id} [put]
 func (s UserService) UpdateUser(w http.ResponseWriter, r *http.Request) {
-	idS := r.PathValue("id")
-	if idS == "" {
-		panic("empty id path value")
-	}
-
-	id, err := strconv.Atoi(idS)
+	id, err := getIdPathValue(r)
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		api.WriteErrorf(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	if id > math.MaxInt32 {
-		api.WriteError(w, http.StatusBadRequest, "id cannot be greater than 2147483647")
-		return
-	}
+	dbResCh := make(chan struct {
+		user types.User
+		err  error
+	}, 1)
+	go func() {
+		newUser, err := s.db.GetUserById(r.Context(), id)
+		dbResCh <- struct {
+			user types.User
+			err  error
+		}{newUser, err}
+	}()
 
 	var req UpdateUserRequest
 	if err := api.DecodeJSON(r, &req); err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		api.WriteErrorf(w, http.StatusBadRequest, err.Error())
 		return
 	}
 
-	newUser, err := s.db.GetUserById(r.Context(), int32(id))
+	dbRes := <-dbResCh
+	newUser := dbRes.user
+	err = dbRes.err
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		if errors.Is(err, types.ErrUserIdNotExists) {
+			api.WriteErrorf(w, http.StatusNotFound, "user with this id was not found")
+			return
+		}
+		api.WriteErrorf(w, http.StatusInternalServerError, "UpdateUser: %v", err)
 		return
-	}
-
-	if req.FirstName != "" {
-		newUser.FirstName = req.FirstName
-	}
-
-	if req.LastName != "" {
-		newUser.LastName = req.LastName
 	}
 
 	if req.Email != "" {
+		if !valid.Email(req.Email) {
+			api.WriteErrorf(w, http.StatusBadRequest, "invalid email")
+			return
+		}
 		newUser.Email = req.Email
 	}
-
+	if req.FirstName != "" {
+		newUser.FirstName = req.FirstName
+	}
+	if req.LastName != "" {
+		newUser.LastName = req.LastName
+	}
 	newPassword := [60]byte([]byte(newUser.Password))
 	if req.Password != "" {
 		hashedPassword, err := bcrypt.GenerateFromPassword([]byte(req.Password), bcrypt.DefaultCost)
 		if err != nil {
 			if errors.Is(err, bcrypt.ErrPasswordTooLong) {
-				api.WriteError(w, http.StatusBadRequest, "password length exceeds 72 bytes")
+				api.WriteErrorf(w, http.StatusBadRequest, "password length exceeds 72 bytes")
 				return
 			}
 
-			api.WriteError(w, http.StatusInternalServerError, err.Error())
+			api.WriteErrorf(w, http.StatusInternalServerError, "UpdateUser: %v", err)
 			return
 		}
 
@@ -204,11 +245,24 @@ func (s UserService) UpdateUser(w http.ResponseWriter, r *http.Request) {
 
 	user, err := s.db.UpdateUserById(r.Context(), int32(id), newUser.FirstName, newUser.LastName, newUser.Email, newPassword)
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
+		if errors.Is(err, types.ErrNameTooLong) {
+			api.WriteErrorf(w, http.StatusBadRequest, "first or last name cannot be longer than %d characters", types.NameMaxLen)
+			return
+		}
+		if errors.Is(err, types.ErrEmailTooLong) {
+			api.WriteErrorf(w, http.StatusBadRequest, "email cannot be longer than %d characters", types.EmailMaxLen)
+			return
+		}
+		if errors.Is(err, types.ErrUserEmailExists) {
+			api.WriteErrorf(w, http.StatusBadRequest, "this email is already in use")
+			return
+		}
+
+		api.WriteErrorf(w, http.StatusInternalServerError, "UpdateUser: %v", err)
 		return
 	}
 
-	api.WriteJSON(w, http.StatusCreated, user)
+	api.WriteJSON(w, http.StatusOK, user)
 }
 
 // @Summary      Delete user by id
@@ -218,8 +272,25 @@ func (s UserService) UpdateUser(w http.ResponseWriter, r *http.Request) {
 // @Param        id   path      int32  true  "User ID"
 // @Success      204
 // @Failure      400  {object}  api.ErrorResponse
+// @Failure      500  {object}  api.ErrorResponse
 // @Router       /users/{id} [delete]
 func (s UserService) DeleteUser(w http.ResponseWriter, r *http.Request) {
+	id, err := getIdPathValue(r)
+	if err != nil {
+		api.WriteErrorf(w, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	err = s.db.DeleteUserById(r.Context(), id)
+	if err != nil {
+		api.WriteErrorf(w, http.StatusInternalServerError, "DeleteUser: %v", err)
+		return
+	}
+
+	api.WriteNoContent(w)
+}
+
+func getIdPathValue(r *http.Request) (int32, error) {
 	idS := r.PathValue("id")
 	if idS == "" {
 		panic("empty id path value")
@@ -227,21 +298,12 @@ func (s UserService) DeleteUser(w http.ResponseWriter, r *http.Request) {
 
 	id, err := strconv.Atoi(idS)
 	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
-		return
+		return 0, errors.New("invalid number")
 	}
 
 	if id > math.MaxInt32 {
-		api.WriteError(w, http.StatusBadRequest, "id cannot be greater than 2147483647")
-		return
+		return 0, fmt.Errorf("id cannot be greater than %d", math.MaxInt32)
 	}
 
-	err = s.db.DeleteUserById(r.Context(), int32(id))
-	if err != nil {
-		api.WriteError(w, http.StatusBadRequest, err.Error())
-		return
-	}
-
-	w.WriteHeader(http.StatusNoContent)
-	w.Write([]byte{})
+	return int32(id), nil
 }
