# src/pkg/api/response.go
@@ -3,6 +3,7 @@ package api
 import (
 	"encoding/json"
 	"fmt"
+	"log"
 	"net/http"
 )
 
@@ -10,62 +11,80 @@ type ErrorResponse struct {
 	Error string `json:"error"`
 }
 
-func WriteHTML(w http.ResponseWriter, statusCode int, v string) error {
+func WriteHTMLf(w http.ResponseWriter, statusCode int, formatHTML string, a ...any) {
 	const op = "api.wtireHTML"
 
 	w.Header().Set("Content-Type", "text/html; charset=utf-8")
 	w.WriteHeader(statusCode)
-	_, err := w.Write([]byte(v))
+	_, err := w.Write([]byte(fmt.Sprintf(formatHTML, a...)))
 	if err != nil {
-		return fmt.Errorf("%s: %w", op, err)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		log.Printf("%s: %v\n", op, err)
 	}
-	return nil
 }
 
-func WriteText(w http.ResponseWriter, statusCode int, v string) error {
-	const op = "api.wtireText"
+func WriteTextf(w http.ResponseWriter, statusCode int, format string, a ...any) {
+	const op = "api.wtireTextf"
 
 	w.Header().Set("Content-Type", "text/plain; charset=utf-8")
 	w.WriteHeader(statusCode)
-	_, err := w.Write([]byte(v))
+	_, err := w.Write([]byte(fmt.Sprintf(format, a...)))
 	if err != nil {
-		return fmt.Errorf("%s: %w", op, err)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		log.Printf("%s: %v\n", op, err)
 	}
-	return nil
 }
 
-func WriteJSON(w http.ResponseWriter, statusCode int, v any) error {
+func WriteJSON(w http.ResponseWriter, statusCode int, v any) {
 	const op = "api.wtireJSON"
 
 	data, err := json.Marshal(v)
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return fmt.Errorf("%s: %w", op, err)
+		log.Printf("%s: %v\n", op, err)
 	}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
 	_, err = w.Write(data)
 	if err != nil {
-		return fmt.Errorf("%s: %w", op, err)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		log.Printf("%s: %v\n", op, err)
 	}
-	return nil
 }
 
-func WriteError(w http.ResponseWriter, statusCode int, msg string) error {
-	const op = "api.wtireError"
+func WriteErrorf(w http.ResponseWriter, statusCode int, format string, a ...any) {
+	const op = "api.wtireErrorf"
 
-	data, err := json.Marshal(ErrorResponse{msg})
+	errMsg := fmt.Sprintf(format, a...)
+	if statusCode >= 500 {
+		log.Printf("%s: %s\n", op, errMsg)
+		errMsg = "internal server error"
+	}
+
+	data, err := json.Marshal(ErrorResponse{errMsg})
 	if err != nil {
 		http.Error(w, err.Error(), http.StatusInternalServerError)
-		return fmt.Errorf("%s: %w", op, err)
+		log.Printf("%s: %v\n", op, err)
+		return
 	}
 
 	w.Header().Set("Content-Type", "application/json")
 	w.WriteHeader(statusCode)
 	_, err = w.Write(data)
 	if err != nil {
-		return fmt.Errorf("%s: %w", op, err)
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		log.Printf("%s: %v\n", op, err)
 	}
-	return nil
+}
+
+func WriteNoContent(w http.ResponseWriter) {
+	const op = "api.wtireNoContent"
+
+	w.WriteHeader(http.StatusNoContent)
+	_, err := w.Write([]byte{})
+	if err != nil {
+		http.Error(w, err.Error(), http.StatusBadRequest)
+		log.Printf("%s: %v\n", op, err)
+	}
 }
